# audify

./: .gitignore  FILE_TREE.md  README.md  pyproject.toml
api/: config.py  exceptions.py  main.py
api/controllers/: __init__.py  albums.py  artists.py  auth.py  playback_history.py  playlists.py  tracks.py  users.py
api/dependencies/: __init__.py  album_dependency.py  artist_dependency.py  auth_dependency.py  playback_history_dependency.py  playlist_dependency.py  track_dependency.py  user_dependency.py
api/dtos/: albums.py  artists.py  auth.py  playback_history.py  playlist.py  tracks.py  users.py
api/helpers/: object_id.py  pagination.py  query_params.py
api/v1/: __init__.py  albums.py  artists.py  playback_history.py  playlists.py  tracks.py  users.py
app/: config.py  main.py
app/core/: config.py
app/helpers/: depedencies.py  query_params.py
application/services/: __init__.py  albums.py  artists.py  authentication.py  base.py  playback_history.py  playlists.py  tracks.py  users.py
domain/abstractions/: __init__.py  base.py  enums.py
domain/entities/: __init__.py  album.py  artist.py  playback_history.py  playlist.py  role.py  role_user.py  track.py  user.py
domain/exceptions/: base.py  user.py
domain/interfaces/: __init__.py  authentication.py  mapper.py  repositories.py  services.py
domain/object_values/: __init__.py  account_type.py  aliases_artist.py  artist_embedded_track.py  artist_embeddings.py  images_profile_artists.py  media_quality.py  metrics_artist.py  notification.py  playback_context.py  playback_device.py  setting.py  (+3 more)
(+72 files in other folders)
