[project]
name = "Audify"
version = "0.1.0"
authors = [
    {name = "Angel", email = "angelgabriel.16ra@gmail.com"}
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["fastapi", "mongodb", "audify"]
license = {file = "LICENSE"}

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "pyjwt",
    "python-dotenv"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.fastapi]
entrypoint = "api.main:app"
